# Software_development_infrastructure_for_mobile_robots

./: .gitignore
LR_1/: README.md  package.xml
LR_1/include/turtle_stalker/: ROS_commands.hpp  Turtle.hpp
LR_1/launch/: generate_launch.py  start.launch
LR_1/src/: ROS_commands.cpp  Turtle.cpp  main.cpp
LR_2/: README.md
LR_2/install/turtle_stalker/share/turtle_stalker/: start.launch.py
LR_2/src/turtle_stalker/: CMakeLists.txt
LR_2/src/turtle_stalker/include/turtle_stalker/: Random.hpp
LR_2/src/turtle_stalker/src/: ROS_commands.cpp  Random.cpp  main.cpp
LR_3/: README.md  dds-config.xml  requirements.txt
LR_3/src/: Turtle.py  dds.py  start.py  window.py
